# anomaly-detection-system

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py  data_loader.py
dashboard/assets/: custom.css
docker/: Dockerfile.api  Dockerfile.dashboard
notebooks/: anomaly_detection_colab.ipynb
src/api/: dependencies.py  logging_config.py  main.py  models.py  routes.py  test_api.py
src/data/: dataset.py  download_data.py  preprocess.py
src/detection/: alert_system.py  evaluate.py  threshold_engine.py
src/models/: autoencoder.py  isolation_forest.py  train_autoencoder.py
tests/: test_api.py  test_data_pipeline.py
